<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.music.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/home_linear_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/imageStyle"
                android:src="@drawable/home"
                />
            <TextView
                android:text="@string/home"
                style="@style/textStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/now_playing_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/imageStyle"
                android:src="@drawable/now_playing"
                />
            <TextView
                android:text="@string/nowPlaying"
                style="@style/textStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/charts_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/imageStyle"
                android:src="@drawable/chart"
                />
            <TextView
                android:text="@string/charts"
                style="@style/textStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_release_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/imageStyle"
                android:src="@drawable/new_release"
                />
            <TextView
                android:text="@string/newRelease"
                style="@style/textStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/library_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/imageStyle"
                android:src="@drawable/mu"
                />
            <TextView
                android:text="@string/library"
                style="@style/textStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/imageStyle"
                android:src="@drawable/search"
                />
            <TextView
                android:text="@string/search"
                style="@style/textStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                style="@style/imageStyle"
                android:src="@drawable/setting"
                />
            <TextView
                android:text="@string/setting"
                style="@style/textStyle"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
